fixed horizontal scroll from text scaling

--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -57,10 +57,10 @@ img[alt="github icon"] {
   &.active {
     color: $primary;
     background-color: white;
-    scale: 1.3;
+    font-weight: 800;
   }
   &:hover {
-    scale: 1.3;
+    scale: 1.1;
     background: none;
   }
 }
